--- a/source/about_section.scss
+++ b/source/about_section.scss
@@ -1,15 +1,43 @@
 .about {
+	background: url(../img/about/about_bg.jpg) center/cover no-repeat;
+	&__content {
+		color: #242A56;
+		padding: 40px 0px;
+	}
 	&__img {
+		width: 100%;
 		display: flex;
+		margin-bottom: 20px;
+		// padding-top: 40px;
 		align-items: center;
 		justify-content: center;
-	}
-	&__content {
+		img {
+			width: 100%;
+
+		}
 	}
 	&__intro {
+		font-size: 18px;
+		line-height: 26px;
+		font-weight: bold;
 	}
 	&__trigger {
+		padding: 16px;
+		margin: 20px 0px;
+		background: #FBF7F1;
+		border-radius: 12px;
+		border: 1px solid #C1D3DE;
+		p:not(:last-child) {
+			line-height: 24px;
+			margin-bottom: 18px;
+		}
 	}
 	&__outro_text {
+		p {
+			text-align: left;
+			margin-bottom: 18px;
+			font-weight: normal;
+			line-height: 26px;
+		}
 	}
 }
