--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ body {
   height: 40vh;
   margin-top: 60px;
   position: relative;
-  background: url(../img/welcome/img1.jpg) center no-repeat;
+  background: url(../img/welcome/img1.jpg) center/cover no-repeat;
 }
 .welcome__blur {
   left: 0;
@@ -189,16 +189,31 @@ body {
   padding: 0px 16px;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .welcome__text {
   position: absolute;
+  padding: 0 16px;
+  width: 100%;
 }
 .welcome__text h1 {
   color: #fff;
   font-size: 32px;
   font-weight: 900;
   line-height: 40px;
-  margin-top: 40px;
+  font-weight: bold;
   margin-bottom: 28px;
 }
 .welcome__text p {
@@ -206,14 +221,48 @@ body {
   color: #fff;
 }
 
+.about {
+  background: url(../img/about/about_bg.jpg) center/cover no-repeat;
+}
+.about__content {
+  color: #242A56;
+  padding: 40px 0px;
+}
 .about__img {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+.about__img img {
+  width: 100%;
+}
+.about__intro {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: bold;
+}
+.about__trigger {
+  padding: 16px;
+  margin: 20px 0px;
+  background: #FBF7F1;
+  border-radius: 12px;
+  border: 1px solid #C1D3DE;
+}
+.about__trigger p:not(:last-child) {
+  line-height: 24px;
+  margin-bottom: 18px;
+}
+.about__outro_text p {
+  text-align: left;
+  margin-bottom: 18px;
+  font-weight: normal;
+  line-height: 26px;
 }
