--- a/source/welcome_section.scss
+++ b/source/welcome_section.scss
@@ -3,7 +3,7 @@
 	height: 40vh;
 	margin-top: 60px;
 	position: relative;
-	background: url(../img/welcome/img1.jpg) center no-repeat;
+	background: url(../img/welcome/img1.jpg) center/cover no-repeat;
 	&__blur {
 		left: 0;
 		width: 100%;
@@ -17,17 +17,24 @@
 		padding: 0px 16px;
 		width: 100%;
 		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 
 	}
 	&__text {
 		position: absolute;
+		padding: 0 16px;
+		width: 100%;
 
 		h1 {
 			color: #fff;
 			font-size: 32px;
 			font-weight: 900;
 			line-height: 40px;
-			margin-top: 40px;
+			font-weight: bold;
+			// margin-top: 40px;
 			margin-bottom: 28px;
 		}
 		p {
@@ -36,17 +43,4 @@
 		}
 
 	}
-	// &__title {
-	// 	font-size: 32px;
-	// 	font-weight: 900;
-	// 	line-height: 40px;
-	// 	margin-top: 40px;
-	// 	margin-bottom: 28px;
-	// 	position: absolute;
-	// 	color: #fff;
-	// }
-	// &__subtitle {
-	// 	color: #fff;
-	// 	position: absolute;
-	// }
 }
