--- a/source/main_content.scss
+++ b/source/main_content.scss
@@ -2,5 +2,12 @@
 	transition: 0.5s ease 0s all;
 	&.active {
 		opacity: 0;
+		overflow: hidden;
+	}
+}
+
+body  {
+	&.lock {
+		overflow: hidden;
 	}
 }
