--- a/source/styles.scss
+++ b/source/styles.scss
@@ -3,3 +3,4 @@
 @import "main_content.scss"; 
 @import "welcome_section.scss"; // Первая секция
 @import "about_section.scss"; // Вторая секция
+@import "targets.scss"; // Третья секция 
