--- a/source/welcome_section.scss
+++ b/source/welcome_section.scss
@@ -33,13 +33,15 @@
 			font-size: 32px;
 			font-weight: 900;
 			line-height: 40px;
-			font-weight: bold;
-			// margin-top: 40px;
+			font-family: Inter;
+			font-style: normal;
 			margin-bottom: 28px;
 		}
 		p {
-			width: 90%;
 			color: #fff;
+			font-family: Roboto;
+			font-style: normal;
+			font-weight: normal;
 		}
 
 	}
