--- a/source/styles.scss
+++ b/source/styles.scss
@@ -5,3 +5,4 @@
 @import "about_section.scss"; // Вторая секция (Кто мы такие)
 @import "targets.scss"; // Третья секция (Кому показываем рекламу)
 @import "services.scss"; // Четвертая секция (Сервисы и цены)
+@import "advertising.scss"; // Пятая секция (Что такое реклама в Google)
