--- a/css/styles.css
+++ b/css/styles.css
@@ -302,12 +302,6 @@ body.lock {
   text-align: center;
   font-family: "Inter";
 }
-.targets__title {
-  margin-bottom: 32px;
-  line-height: 36px;
-  font-size: 28px;
-  font-weight: 900;
-}
 .targets__grid {
   display: -ms-grid;
   display: grid;
@@ -343,13 +337,6 @@ body.lock {
   background: url(../img/about/about_bg.jpg) center/cover no-repeat;
   font-family: "Inter";
   padding: 40px 0;
-}
-.services__title {
-  margin-bottom: 32px;
-  line-height: 36px;
-  font-size: 28px;
-  font-weight: 900;
-  text-align: center;
 }
 .services__list {
   margin-bottom: 20px;
@@ -495,13 +482,6 @@ body.lock {
   padding: 40px 0;
   font-family: Inter;
 }
-.advertising__title {
-  margin-bottom: 32px;
-  line-height: 36px;
-  font-size: 28px;
-  font-weight: 900;
-  text-align: center;
-}
 .advertising__item {
   margin-bottom: 32px;
 }
@@ -545,4 +525,52 @@ body.lock {
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
+}
+
+.offer {
+  padding: 40px 0;
+}
+.swiper {
+  width: 100%;
+  height: 368px;
+  padding: 0 10px;
+}
+
+.offer__btn-left {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #222;
+  border-radius: 50%;
+}
+
+.result {
+  padding: 40px 0;
+  background: url(../img/about/about_bg.jpg) center/cover no-repeat;
+  font-family: Inter;
+}
+.result__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  margin-bottom: 20px;
+}
+.result__text {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  font-style: normal;
+  margin-left: 8px;
+}
+
+.title {
+  color: #242a56;
+  font-family: Inter;
+  margin-bottom: 32px;
+  line-height: 36px;
+  font-size: 28px;
+  font-weight: 900;
+  text-align: center;
 }
