--- a/source/styles.scss
+++ b/source/styles.scss
@@ -7,7 +7,9 @@
 @import "services.scss"; // Четвертая секция (Сервисы и цены)
 @import "advertising.scss"; // Пятая секция (Что такое реклама в Google)
 @import "offer.scss"; // Шестая секция (Слайдер "Что мы предлпгаем")
-@import "result.scss"; // Седьмая секция (Что вы получите в результате?)
+@import "result.scss"; // Восьмая секция (Что вы получите в результате?)
+@import "clients.scss"; // Девятая секция 
+@import "footer.scss"; // Footer
 
 .title {
 	color: rgba(36, 42, 86, 1);
