--- a/source/services.scss
+++ b/source/services.scss
@@ -10,42 +10,45 @@
 	&__item {
 		padding: 20px;
 		background: #fff;
-		border: 1px solid #C1D3DE;
 		border-radius: 12px;
 		margin-bottom: 10px;
+		border: 1px solid #C1D3DE;
 	}
 	&__name {
-		font-weight: bold;
-		font-style: normal;
 		font-size: 18px;
 		line-height: 130%;
+		font-weight: bold;
+		font-style: normal;
 		margin-bottom: 8px;
 	}
 	&__desc {
-		font-weight: normal;
-		font-style: normal;
 		font-size: 16px;
 		line-height: 26px;
+		font-style: normal;
+		font-weight: normal;
 		margin-bottom: 12px;
 	}
 	&__table {
+		width: 100%;
 		display: flex;
 		margin-bottom: 16px;
 	}
 	&__specs-list {
+		width: 100%;
 		display: flex;
-		flex-direction: column;
+		font-size: 12px;
+		font-weight: bold;
+		line-height: 16px;
 		font-family: Inter;
 		font-style: normal;
-		font-weight: bold;
-		font-size: 12px;
-		line-height: 16px;
+		flex-direction: column;
 	}
 	&__spec {
-		display: flex;
-		align-items: center;
-		padding: 0 10px;
+		width: 100%;
 		height: 44px;
+		display: flex;
+		padding: 0 10px;
+		align-items: center;
 		& p {
 			width: 89px;
 		}
@@ -57,22 +60,24 @@
 	}
 	&__spec:nth-child(odd) {
 		background: #EDF4FA;
-		border-bottom: 1px solid #C1D3DE;
 		border-top: 1px solid #C1D3DE;
+		border-bottom: 1px solid #C1D3DE;
 	}
 	&__value-list {
+		width: 100%;
 		display: flex;
-		flex-direction: column;
-		font-style: normal;
-		font-weight: normal;
 		font-size: 14px;
 		line-height: 20px;
+		font-style: normal;
+		font-weight: normal;
+		flex-direction: column;
 	}
 	&__value {
-		width: 129px;
+		// width: 129px;
+		width: 100%;
+		height: 44px;
 		display: flex;
 		align-items: center;
-		height: 44px;
 	}
 	&__value:nth-child(odd) {
 		background: #EDF4FA;
@@ -83,17 +88,17 @@
 		justify-content: center;
 	}
 	&__order-btn {
-		position: relative;
 		width: 100%;
 		color: #fff;
-		background: #376FFF;
+		position: relative;
 		padding: 12px 69px;
+		background: #376FFF;
 		border-radius: 12px;
 	}
 	&__btn-inner {
 		display: flex;
-		justify-content: center;
 		align-items: center;
+		justify-content: center;
 		& p {
 			font-size: 16px;
 			line-height: 24px;
@@ -106,18 +111,18 @@
 
 	}
 	.info {
+		padding: 20px;
+		border-radius: 12px;
 		background: #EDF4FA;
 		border: 1px solid #C1D3DE;
-		border-radius: 12px;
-		padding: 20px;
 		&__icon {
 			margin-bottom: 10px;
 		}
 		&__text {
-			font-style: normal;
-			font-weight: normal;
 			font-size: 16px;
 			line-height: 26px;
+			font-style: normal;
+			font-weight: normal;
 		}
 	}
 }
